# itjustworks

./: Cargo.toml  readme.md
src/: Sysinfo_tests.rs  checks.rs  download.rs  error_handelling.rs  extract.rs  lib.rs  main.rs  packages.rs  utils.rs
src/install/: compile.rs  enable_service.rs  mod.rs
tests/: Sys_info_tests.rs
