[package]
name = "itjustworks"
version = "0.1.0"
edition = "2021"

[dependencies]
# crossterm = "0.27.0"
# ratatui = "0.26.0"
tempdir = "0.3.7"
tar = "0.4"
xz2 = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip-extract = {version = "0.1", features = ["deflate-zlib"]}
os_type = "2.6.0"
